<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="warn_ble_not_supported">Warning: Bluetooth LE is not supported</string>
  <string name="label_data">Data:</string>
  <string name="label_device_address">Device address:</string>
  <string name="label_state">State:</string>
  <string name="no_data">No data</string>
  <string name="connected">Connected</string>
  <string name="disconnected">Disconnected</string>
  <string name="title_devices">Bluetooth LE Device Scan</string>
  <string name="warn_bluetooth_not_supported">Warning: Bluetooth not supported.</string>

  <string name="unknown_device">Unknown device</string>
  <string name="unknown_characteristic">Unknown characteristic</string>
  <string name="unknown_service">Unknown service</string>

  <!-- Menu items -->
  <string name="menu_connect">Connect</string>
  <string name="menu_disconnect">Disconnect</string>
  <string name="menu_scan">Scan</string>
  <string name="menu_stop">Stop</string>
  <string name="username">אורי</string>
  <string name="heartrate_unknown">--</string>
  <string name="device_unknown"></string>
  <string name="temperature">--</string>
  <string name="menu_switch_user">User</string>
  <string name="menu_settings">Settings</string>
  <string name="title_activity_users">UsersActivity</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="heartrate_pending">...</string>
  <string name="heartrate_error">ERR</string>
  <string name="setting_username">username</string>
  <string name="setting_device_autoconnect">deviceAutoConnect</string>
  <string name="setting_max_hr">maxHeartRate</string>
  <string name="setting_min_hr">minHeartRate</string>
  <string name="setting_alert_outside_hr_range">alertOutsideHrRange</string>
  <string name="default_username">NA</string>
  <string name="menu_exit">Exit</string>
  <string name="desc_bluetooth_connection">Bluetooth Connection</string>
  <string name="audioCuesButtonDescription">Audio Cues On/Off</string>
  <string name="reverseOrientationButtonDescription">Reverse Orientation</string>
  <string name="menu_bt_settings">Bluetooth Settings</string>
  <string name="showVolumeDescription">Show Volume</string>
  <string name="title_activity_drawer">DrawerActivity</string>

  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="drawer_open_title">Go to...</string>
  <string name="toggleHrConnectionDescription">Toggle HR connection</string>
  <string name="drawer_settings_title">Settings</string>
  <string name="drawer_devices_title">Devices</string>
  <string name="setting_active_device">Active Device</string>
</resources>
