<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:showDividers="beginning|middle|end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/username"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="36sp"
            android:layout_weight="0.15"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/heartRateText"
            android:layout_gravity="center_horizontal"
            android:text="@string/heartrate_unknown"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal|fill_vertical"
            android:textSize="72sp"
            android:layout_weight="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="fill"
            >

            <TextClock

                android:layout_height="match_parent"
                android:id="@+id/textClock"
                android:layout_gravity="center"
                android:textSize="48sp"
                android:format24Hour="HH:mm:ss"
                android:format12Hour="hh:mm:ss a"
                android:inputType="time"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temperature"
                android:id="@+id/textView"
                android:textSize="48sp"
                android:typeface="monospace"
                android:gravity="center_vertical"
                />
        </LinearLayout>

    </LinearLayout>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Record"
        android:id="@+id/toggleButton"
        android:textSize="48sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"/>

</RelativeLayout>
